# dune-ug-hpc

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  config.h.cmake  configure.ac  dune-ug-hpc.pc.in  dune.module
cmake/modules/: CMakeLists.txt  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune/ug_hpc/: CMakeLists.txt  Makefile.am  ug_hpc.hh
m4/: CMakeLists.txt  Makefile.am  dune-ug-hpc.m4
src/: Ball.hh  CMakeCache.txt  CMakeLists.txt  GlobalUniqueIndex.hh  Makefile.am  Parmetisgridpartitioner.hh  dune_ug_hpc.cc  param.ini
